--- a/config.json
+++ b/config.json
@@ -4,9 +4,11 @@
   "ignore": {
     "cord_loader": true,
     "downloader": true,
+    "downloader_ft": false,
     "text_loader":true,
-    "pubmed_bulk_loader":false,
+    "pubmed_bulk_loader":true,
     "splitter": true,
+    "splitter_ft": false,
     "ner": true,
     "analysis": true,
     "merger": true,
@@ -17,6 +19,11 @@
     "input_path": "data/Lund-Autophagy-1.txt",
     "output_path": "results/dataloader/text.json",
     "batch_size": 100 
+  },
+  "downloader_ft": {
+    "input_path": "data/pmid-example.txt",
+    "output_path": "results/dataloader/pmid-example.txt.json",
+    "max_threads": 8
   },
   "cord_loader": {
     "input_path": "data/metadata.csv",
@@ -47,6 +54,12 @@
 	  "file_limit":[0,100],
     "tokenizer": "spacy",
     "model_name": "en_core_web_sm",
+    "batch_size": 100
+  },
+  "splitter_ft": {
+    "input_path": "results/dataloader/pmid-example.txt.json",
+    "output_path": "results/splitter/pmid-example.paragraphs.json",
+    "split": "paragraphs",
     "batch_size": 100
   },
   "ner": {
