--- a/config.json
+++ b/config.json
@@ -4,11 +4,13 @@
   "ignore": {
     "cord_loader": true,
     "downloader": true,
-    "downloader_ft": false,
+    "downloader_ft": true,
+    "download_archive": false,
+    "extract_text": false,
     "text_loader":true,
     "pubmed_bulk_loader":true,
     "splitter": true,
-    "splitter_ft": false,
+    "splitter_ft": true,
     "ner": true,
     "analysis": true,
     "merger": true,
@@ -24,6 +26,19 @@
     "input_path": "data/pmid-example.txt",
     "output_path": "results/dataloader/pmid-example.txt.json",
     "max_threads": 8
+  },
+  "download_archive": {
+    "archive": "PMC050XXXXX_json_unicode.tar.gz",
+    "save_path": "/tmp",
+    "extract_path": "results/dataloader/archive",
+  },
+  "extract_text": {
+      "extract_path": "results/dataloader/archive",
+      "output_path": "results/splitter/",
+      "split": "sentences",
+      "output_file": "output.json",
+      "batch_size": 1000,
+      "max_threads": 4,
   },
   "cord_loader": {
     "input_path": "data/metadata.csv",
