Fixes in main.py for download_archive.

--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
     "cord_loader": true,
     "downloader": true,
     "downloader_ft": true,
-    "download_archive": false,
-    "extract_text": true,
+    "download_archive": true,
+    "extract_text": false,
     "text_loader":true,
     "pubmed_bulk_loader":true,
     "splitter": true,
