Fix for list/dict confusion in archive splitter.

--- a/config.json
+++ b/config.json
@@ -6,12 +6,12 @@
     "downloader": true,
     "downloader_ft": true,
     "download_archive": true,
-    "extract_text": false,
+    "extract_text": true,
     "text_loader":true,
     "pubmed_bulk_loader":true,
     "splitter": true,
     "splitter_ft": true,
-    "ner": true,
+    "ner": false,
     "analysis": true,
     "merger": true,
     "metrics":true,
